Sat May 17 12:19:17 2003  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

	* examples/handcrafted/BasicSP/descriptors/BasicSP.cad: Fixed yet
	  another typo. Thanks to Nanbor for pointing it out. 

Sat May 17 12:07:47 2003  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

	* examples/handcrafted/BasicSP/descriptors/BasicSP.cad: Fixed a
	  typo. Thanks to Nanbor for pointing it out.

	* examples/handcrafted/BasicSP/BasicSP.idl: Added ciao/ to the
	  CM_Container.idl

Sat May 17 11:18:22 2003  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

	* examples/handcrafted/BasicSP/*/config: Config files for
	  testing. 

Sat May 17 11:05:40 2003  Nanbor Wang  <nanbor@cs.wustl.edu>

	* examples/handcrafted/BasicSP/BasicSP.idl: Changed to include
	  "CCM_Components.idl" directly instead of
	  "ciao/CCM_Components.idl".

	* examples/handcrafted/BasicSP/BasicSP.mpc: Removed BasicSPC.cpp
	  from the svnt library source file list since we are linking with
	  BasicSP stub library already.  Removed BasicSPES.cpp from the
	  source file list also because it's basically empty.

	* examples/handcrafted/BasicSP/BMDevice/BMDevice.mpc: The stub and
	  svnt libraries should depends on BasicSP_stub library instead of
	  themselves.

	* examples/handcrafted/BasicSP/BMDevice/BMDevice_exec.h: Fixed
	  incorrect usage of extern "C" and export macro.

	* examples/handcrafted/BasicSP/BMDevice/BMDevice_svnt.h: Changed
	  the use of BMDEVICE_STUB_Export macro to BMDEVICE_SVNT_Export.

	* examples/handcrafted/BasicSP/EC/EC_svnt.cpp: The start ()
	  operation should not return anything.

Fri May 16 18:11:42 2003  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

	* examples/handcrafted/BasicSP/BMDisplay/BMDisplay.idl (BasicSP):
	* examples/handcrafted/BasicSP/BasicSP.mpc:
	* examples/handcrafted/BasicSP/BMDevice/BMDevice.mpc:
	* examples/handcrafted/BasicSP/BMDevice/BMDevice_exec.cpp:
	* examples/handcrafted/BasicSP/BMDevice/BMDevice_exec.h:
	* examples/handcrafted/BasicSP/EC/EC.idl: